@startuml
'https://plantuml.com/use-case-diagram


abstract class Proprietary {
    name
    Tipo
    address
    descriptions
    cost
    vender:boolean
    render:boolean
}
class Land{
}

class Apartment{
numberOfRooms
numberOfBathrooms
numberOfFloors
numberOfGarages
Equipaments

}
class House{
    numberOfRooms
    numberOfBathrooms
    numberOfFloors
    numberOfGarages
    Equipaments
    Basement: boolean
    inhabited  loft: boolean
    Sun exposure: boolean

}

class Owner {
 Proprietary
}

abstract class User {
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}

class RealEstate {
    name
    address
    descriptions
    website
    phoneNumber
    email
    vatNumber
    logo
}

class Employee{

}

enum Roles{
    ROLE_STORE_MANAGER
    ROLE_REAL_ESTATE_AGENT
}

Employee "1"--"1" Roles : has
Employee --|> User : is
Owner  --|>  User : is
RealEstate "1"--" 0.*" User : has
House  --|>  Proprietary : is
Apartment  --|>  Proprietary : is
RealEstate "1"--"0.*" Proprietary : has
Land  --|>  Proprietary : is
Owner "1"--"1.*" Proprietary : has

@enduml